<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:weightSum="3">

        <Button
            android:id="@+id/all_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:clickable="true"
            android:textColor="@drawable/button_text_color"
            android:text="@string/all"/>

        <Button
            android:id="@+id/sale_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:gravity="center"
            android:background="@drawable/button_bg"
            android:clickable="true"
            android:textColor="@drawable/button_text_color"
            android:text="@string/sale"/>
        <Button
            android:id="@+id/ref_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:gravity="center"
            android:clickable="true"
            android:background="@drawable/button_bg"
            android:textColor="@drawable/button_text_color"
            android:text="@string/refi"/>

    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:choiceMode="singleChoice"
        android:listSelector="@color/light_grey"
        android:layout_weight="1"/>

</LinearLayout>