<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >

   <LinearLayout
       android:id="@+id/remember_layout"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:gravity="center_horizontal"
       android:layout_alignParentBottom="true"
       android:layout_marginTop="10dp"
       android:layout_marginBottom="80dp"
       android:layout_centerHorizontal="true">

       <CheckBox
           android:id="@+id/remeber_checkbox"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:theme="@style/SignInCheckBox"/>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textColor="@color/grey"
           android:text="@string/remember_uname"/>

   </LinearLayout>

    <Button
        android:id="@+id/signin_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_above="@id/remember_layout"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/medium_font"
        android:theme="@style/MyButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/signin"
        android:background="@color/button_blue"

        />



    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:singleLine="true"
        android:layout_marginBottom="10dp"
        android:layout_centerInParent="true"
        android:hint="@string/password"
        android:textColorHint="@color/grey"
        android:textSize="@dimen/medium_font"
        android:textColor="@android:color/black"
        android:layout_above="@id/signin_button"
        android:drawableLeft="@drawable/lockicon"
        android:drawablePadding="10dp"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        android:hint="@string/username"
        android:singleLine="true"
        android:textColorHint="@color/grey"
        android:textSize="@dimen/medium_font"
        android:textColor="@android:color/black"
        android:layout_above="@id/password"
        android:drawableLeft="@drawable/usericon"
        android:drawablePadding="10dp"
        />


    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/connextmainportion"
            android:layout_above="@id/username"
            android:scaleType="centerInside"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true" />


    <ProgressBar
        android:id="@+id/ProgressCircle"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_above="@+id/username"
        android:layout_centerHorizontal="true"
        android:indeterminate="false" />




</RelativeLayout>