<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/medium_font"
        android:textColor="@color/colorWhite"
        android:text="@string/date_prelim_comp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medium_font"
                android:textColor="@color/colorWhite"
                android:text="@string/from"/>
            <EditText
                android:id="@+id/preim_date_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_font"
                android:inputType="none"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:editable="false"
                android:text="8/12/2010"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentRight="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medium_font"
                android:textColor="@color/colorWhite"
                android:text="@string/to"/>
            <EditText
                android:id="@+id/prelim_date_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textSize="@dimen/small_font"
                android:layout_marginRight="10dp"
                android:editable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="8/12/2010"/>
            <ImageView
                android:id="@+id/prelim_search"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center_vertical"
                android:scaleType="fitCenter"
                android:src="@drawable/searchbutton"/>

        </LinearLayout>


    </RelativeLayout>


    </LinearLayout>

</LinearLayout>