<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/tab_bg_color"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/tab_bg_color">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:textColor="@color/light_grey"
                    android:textSize="@dimen/medium_font"
                    android:layout_centerVertical="true"
                    android:text="Files"
                    />

                <TextView
                    android:id="@+id/file_no_header"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/medium_font"
                    android:textStyle="bold"
                    android:text="ABCD"
                     />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/lblListHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/details"
            android:textColor="@color/blue"
            android:textSize="@dimen/large_font" />

        <ImageView
            android:id="@+id/prelims"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/prelimicon" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="street 8 OR-200, Indus Satelite Green colony, Indore, ID 452001"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="@dimen/big_font" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.25"
                android:text="@string/loan_amt"
                android:textColor="@color/black"
                android:textSize="@dimen/small_font"></TextView>

            <TextView
                android:id="@+id/detail_loan_amt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.75"
                android:text="$30000"
                android:textColor="@color/black"
                android:textSize="@dimen/small_font"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.25"
                android:text="@string/sale_price"
                android:textColor="@color/black"
                android:textSize="@dimen/small_font"></TextView>

            <TextView
                android:id="@+id/detail_sale_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.75"
                android:text="$0.00"
                android:textColor="@color/black"
                android:textSize="@dimen/small_font"></TextView>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.25"
                android:text="@string/file_type"
                android:textColor="@color/black"
                android:textSize="@dimen/small_font"></TextView>

            <TextView
                android:id="@+id/detail_file_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.75"
                android:text="Mobile Home"
                android:textColor="@color/black"
                android:textSize="@dimen/small_font"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.25"
                android:text="@string/date_opn"
                android:textColor="@color/black"
                android:textSize="@dimen/small_font"></TextView>

            <TextView
                android:id="@+id/detail_date_opn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.75"
                android:text="04/13/2016"
                android:textColor="@color/black"
                android:textSize="@dimen/small_font"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.25"
                android:text="@string/date_closed"
                android:textColor="@color/black"
                android:textSize="@dimen/small_font"></TextView>

            <TextView
                android:id="@+id/detail_date_closed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.75"
                android:text="$0.00"
                android:textColor="@color/black"
                android:textSize="@dimen/small_font"></TextView>
        </LinearLayout>

    </LinearLayout>
        <View

            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/grey"
            android:layout_margin="1dp"
            android:layout_marginTop="10dp"
            />

    <ExpandableListView
        android:id="@+id/detail_lvExp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:scrollbars="none"
        android:layout_weight="1" />

    </LinearLayout>


</LinearLayout>